[project]
name = "reflex-katex"
version = "0.0.1"
description = "Reflex custom component katex"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Tyler" },
]
dependencies = [
    "reflex >= 0.8.0"
]

classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry]
packages = [
    { include = "reflex_katex", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"